2014-07-21  Miklos Szeredi <miklos@szeredi.hu>

	* libfuse: highlevel API: fix directory file handle passed to
	ioctl() method.  Reported by Eric Biggers

2014-07-15  Miklos Szeredi <miklos@szeredi.hu>

	* libfuse: document deadlock avoidance for
	fuse_notify_inval_entry() and fuse_notify_delete()

	* fusermount, libfuse: send value as unsigned in "user_id=" and
	"group_id=" options.  Uids/gids larger than 2147483647 would
	result in EINVAL when mounting the filesystem.  This also needs a
	fix in the kernel.

2014-03-26  Miklos Szeredi <miklos@szeredi.hu>

	* Initilaize stat buffer passed to ->getattr() and ->fgetattr() to
	zero in all cases.  Reported by Daniel Iwan

2013-08-26  Miklos Szeredi <miklos@szeredi.hu>

	* libfuse: Add missing includes.  This allows compiling fuse with
	musl.  Patch by Daniel Thau

2013-07-01  Miklos Szeredi <miklos@szeredi.hu>

	* Released 2.9.3

2013-06-20  Miklos Szeredi <miklos@szeredi.hu>

	* libfuse: fix multiple close of device fd.  Reported by Dan
	Greenfield

2013-03-19  Miklos Szeredi <miklos@szeredi.hu>

	* libfuse: fix thread cancel race.  Exiting a worker my race with
	cancelling that same worker.  This caused a segmenation
	fault. Reported and tested by Anatol Pomozov

2013-02-04  Miklos Szeredi <miklos@szeredi.hu>

	* libfuse: fix crash in unlock_path().  Patch by Ratna Manoj

	* libfuse: fix the 'remember' option.  The lru list was not
	initialized for the "/" path.  This resulted in remove_node_lru()
	crashing on LOOKUP-DOTDOT.  Patch by Madan Valluri

	* libfuse: configure: detect new util-linux

	* libfuse: Use AC_CONFIG_HEADERS instead of AM_CONFIG_HEADER.
	Patch by Anatol Pomozov

	* libfuse: rename ./configure.in to ./configure.ac.  Patch by
	Anatol Pomozov

2012-10-01  Miklos Szeredi <miklos@szeredi.hu>

	* Released 2.9.2

2012-10-01  Miklos Szeredi <miklos@szeredi.hu>

	* Fix deadlock in libfuse.  Running "svn update" on a fuse
	filesystem could deadlock because of a bug in the way the paths